Fixed line wrapping issues and styling character mounts page.

--- a/public_dev/css/styles.scss
+++ b/public_dev/css/styles.scss
@@ -487,3 +487,11 @@ $quality7: #E6CC80;
   padding:5px 0;
   border-radius: 4px;
 }
+.mount-display{
+  text-align:center;
+}
+.mount-icon{
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 8px;
+}
